# abstract-agent-runner

./: .gitignore  README.md  benchmark.py  cli.py  pyproject.toml  results_viewer.js  test_agent.py
datasets/swebench_verified/: fetch.js
docs/: agent_environment.md  ai.md  proxy_and_gateway.md
inference_proxy/: main.py
problem_suites/: problem_suite.py
problem_suites/polyglot/: TEST_RUNNER.py  polyglot_suite.py
problem_suites/swebench_verified/: TEST_RUNNER.py  swebench_verified_suite.py
sandbox/: SANDBOX_PROXY.py  sandbox_manager.py
testbed/: cli.py  test_agent.py
testbed/problem_suites/: problem_suite.py
testbed/problem_suites/polyglot/: TEST_RUNNER.py  polyglot_suite.py
testbed/problem_suites/swebench_verified/: swebench_verified_suite.py
testbed/sandbox/: sandbox_manager.py
testbed/utils/: diff.py  git.py  logger.py
utils/: git.py
