[project]
name = "abstract-agent-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "openai>=1.107.2",
    "pydantic-settings>=2.10.1",
    "swebench>=4.1.0",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
include = ["inference_proxy*", "problem_suites*", "sandbox*", "utils*"]
exclude = ["datasets*"]